@@ -47,7 +47,7 @@ class XMLAssertion implements Assertion {
         if (rootEvaluation) {
             key = key?.startsWith(DOT) ? key.substring(1) : key
         }
-        key = escapePath(key, minus(), attributeGetter(), doubleStar(), colon())
+        key = escapePath(key, minus(), attributeGetter(), doubleStar(), colon(), classKeyword())
         def indexOfDot = key.indexOf(".")
         def evaluationString
         def isRootOnly = rootEvaluation ? (indexOfDot < 0) : false
